UPDATE: Auth module: forget-password
